--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.5.2
 Django==3.2
 django-allauth==0.41.0
+django-crispy-forms==1.14.0
 oauthlib==3.2.2
+Pillow==9.3.0
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
 python3-openid==3.2.0
 pytz==2022.6
 requests-oauthlib==1.3.1
